<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/start"
        app:layout_constraintEnd_toStartOf="@+id/endeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/endeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/ende"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startButton"
        app:layout_constraintTop_toTopOf="parent" />

    <org.osmdroid.views.MapView
        android:id="@+id/theMap"
        tilesource="Mapnik"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:hardwareAccelerated="false"
        app:layout_constraintBottom_toTopOf="@+id/zentrierung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton">

    </org.osmdroid.views.MapView>

    <Button
        android:id="@+id/btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="-2dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/aktuelle_position_n_dezentrieren"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/theMap"
        app:layout_constraintStart_toStartOf="@+id/theMap" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="-2dp"
        android:clickable="true"
        android:focusable="true"
        android:text="Legende"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/theMap"
        app:layout_constraintEnd_toEndOf="@+id/theMap" />

    <Button
        android:id="@+id/zentrierung"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/route_laden"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textIRI"
        app:layout_constraintEnd_toStartOf="@+id/speichern"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/speichern"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/speichern_der_n_route"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textIRI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zentrierung"
        app:layout_constraintTop_toBottomOf="@+id/theMap"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textIRI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:text="@string/iri"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>